fix: search bar grows too long

--- a/style.css
+++ b/style.css
@@ -42,16 +42,18 @@ body {
     display: flex;
     padding: 10px;
     align-items: center;
-    gap: 10px;
+    gap: 12px;
 }
 
 .header-row-1 #search {
     flex: 1;
     height: 26px;
+    max-width: 50%;
 }
 
 .header-icon {
     font-size: 50px;
+    margin-left: auto;
 }
 
 .header-row-2 {
